HW4/E-1.5.104-Calculator3/wdir_msg/compile.err

Calculator3.java:25: error: cannot find symbol
            int bc = calculate(b, op2, c) ;
                     ^
  symbol:   method calculate(int,char,int)
  location: class Calculator3
Calculator3.java:26: error: cannot find symbol
            int abc = calculate(a, op1, bc);
                      ^
  symbol:   method calculate(int,char,int)
  location: class Calculator3
Calculator3.java:29: error: cannot find symbol
            int ab = calculate(a, op1, b) ;
                     ^
  symbol:   method calculate(int,char,int)
  location: class Calculator3
Calculator3.java:30: error: cannot find symbol
            int abc = calculate(ab, op2, c);
                      ^
  symbol:   method calculate(int,char,int)
  location: class Calculator3
4 errors


